RESOLVED FIXED266157
[UIAsyncTextInput] Release assertion after selecting "Translate" when async text input is enabled
https://bugs.webkit.org/show_bug.cgi?id=266157
Summary [UIAsyncTextInput] Release assertion after selecting "Translate" when async t...
Wenson Hsieh
Reported 2023-12-09 15:12:49 PST
Attachments
Wenson Hsieh
Comment 1 2023-12-09 15:32:25 PST
EWS
Comment 2 2023-12-09 16:27:16 PST
Committed 271817@main (161dbc0f0eb5): <https://commits.webkit.org/271817@main> Reviewed commits have been landed. Closing PR #21578 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.